--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,8 @@
+.Name{
+ width: 300px; 
+ padding: 5px 0 0 5px;  width: 340px;position:fixed;left:504px;top:0;
+ z-index:1;
+}
 .mov_1{
     width: 500px; 
     position: absolute; left:20px;top:30px;
