--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,8 @@
 .Name{
  width: 300px; 
- padding: 5px 0 0 5px;  width: 340px;position:fixed;left:504px;top:0;
+ padding: 5px;  
+ width: 340px;
+ position:fixed;left:504px;top:0;
  z-index:1;
 }
 .mov_1{
